11-ingress/01-nginx-ingress/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: ingress-default
spec:
  defaultBackend:
    service:
      name: nginx-svc
      port:
        number: 80
  ingressClassName: nginx
