11-ingress/01-nginx-ingress/ingress-domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-domain
  labels:
    name: ingress-domain
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.jsdtech.app
      http:
        paths:
          - backend:
              service:
                name: nginx-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: httpd.jsdtech.app
      http:
        paths:
          - backend:
              service:
                name: httpd-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
