11-ingress/01-nginx-ingress/ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: ingress-path
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/nginx"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/httpd"
            backend:
              service:
                name: httpd-svc
                port:
                  number: 80
